[package]
name = "russ"
version = "0.5.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atom_syndication = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
copypasta = "0.10"
crossterm = "0.28"
diligent-date-parser = "0.1"
directories = "6"
html2text = "0.14"
html-escape = "0.2.13"
num_cpus = "1.16"
opml = "1.1"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
rss = { version = "2.0", default-features = false }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
ratatui = "0.29"
webbrowser = "1"
wsl = "0.1"
article_scraper = "2.1.1"
reqwest = "0.12.12"
tokio = {version = "1.43.0", features=["full"]}
url = "2.5.4"
termimad = "0.31.2"
http = "1.2.0"
async_fn_traits = "0.1.1"

[profile.release]
codegen-units = 1
lto = true
